[package]
name = "xinabox"
version = "0.1.0"
authors = ["IncorrectInclude <46076855+IncorrectInclude@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "xinabox"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.64"
serde = {version = "1.0.124", features = ["derive"]}